<?xml version="1.0"?>
<package format="2">
  <name>ros_helper_examples</name>
  <version>1.0.0</version>
  <description>The ros_helper_examples package</description>

  <maintainer email="chris.mower@ed.ac.uk">Chris E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/ros_helper</url>
  <author email="chris.mower@ed.ac.uk">Chris E. Mower</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
